Changed some UI elements and fused the columns 'Command' and 'ipynb path' to save space.

--- a/jobengine/templates/index.html
+++ b/jobengine/templates/index.html
@@ -46,7 +46,7 @@
                                         <option value="cron">cron</option>
                                         <option value="cmd">cmd</option>
                                         <option value="cron ipynb">cron ipynb</option>
-                                        <option value="cmd ipynb">cmd ipynb</option>
+                                        <option value="ipynb">ipynb</option>
                                     </select>
                                 </div>
                             </div>
