--- a/jobengine/templates/index.html
+++ b/jobengine/templates/index.html
@@ -34,7 +34,7 @@
                             <div class="form-group">
                                 <label for="job_name" class="control-label col-sm-3">Name:</label>
                                 <div class="col-sm-3">
-                                    <input type="text" name="job_name" id="job_name" class="form-control" value="">
+                                        <input type="text" name="job_name" id="job_name" class="form-control" value="" pattern="[a-zA-Z0-9_\-\s+]*" title="Only letters, numbers, '_' and '-' allowed" required>
                                 </div>
                             </div>
                             <div class="form-group">
